// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists does not render pending lists when they do not exist 1`] = `
<div>
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/1"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-shopping-bag text-info mr-3"
                  />
                  foo
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 27 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  style="opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-share"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-edit"
                  href="/lists/1/edit"
                  style="pointer-events: auto; opacity: 1;"
                >
                  <i
                    class="fa fa-edit fa-2x text-warning"
                  />
                </a>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  />
</div>
`;

exports[`Lists renders complete lists 1`] = `
<div>
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="list-group"
  />
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="completed-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/1"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-shopping-bag text-info mr-3"
                  />
                  foo
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 27 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="complete-list-refresh"
                  style="opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-redo fa-2x text-primary"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="complete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lists renders incomplete lists 1`] = `
<div>
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="list-group"
  >
    <div
      class="accepted-list list-group-item"
      data-test-class="non-completed-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <a
                class="router-link"
                href="/lists/1"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-shopping-bag text-info mr-3"
                  />
                  foo
                </h5>
              </a>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 27 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-complete"
                  style="opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="incomplete-list-share"
                  style="pointer-events: auto; opacity: 1;"
                  type="button"
                >
                  <i
                    class="fa fa-users fa-2x text-primary"
                  />
                </button>
                <a
                  class="p-0 mr-3"
                  data-test-id="incomplete-list-edit"
                  href="/lists/1/edit"
                  style="pointer-events: auto; opacity: 1;"
                >
                  <i
                    class="fa fa-edit fa-2x text-warning"
                  />
                </a>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="incomplete-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  />
</div>
`;

exports[`Lists renders pending lists when they exist 1`] = `
<div>
  <p>
    These lists have been shared with you but you have not accepted the invitation.
  </p>
  <div
    class="list-group"
  >
    <div
      class="pending-list list-group-item"
      data-test-class="pending-list"
      data-test-id="list-1"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="row"
          >
            <div
              class="pt-1 col-md-6"
            >
              <h5
                class="mb-1"
              >
                <i
                  class="fa fa-shopping-bag text-info mr-3"
                />
                foo
              </h5>
            </div>
            <div
              class="pt-1 col-md-4"
            >
              <small
                class="text-muted"
              >
                May 27 2020, 12:00:00 am
              </small>
            </div>
            <div
              class="col-md-2"
            >
              <div
                class="float-right btn-group"
                role="group"
              >
                <button
                  class="p-0 mr-3 btn btn-link"
                  data-test-id="pending-list-accept"
                  type="button"
                >
                  <i
                    class="fa fa-check fa-2x text-success"
                  />
                </button>
                <button
                  class="p-0 btn btn-link"
                  data-test-id="pending-list-trash"
                  type="button"
                >
                  <i
                    class="fa fa-trash fa-2x text-danger"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr />
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="list-group"
  />
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  />
</div>
`;

exports[`Lists sets multiSelect to false and clears selectedLists when Hide Select is clicked 1`] = `
<div>
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      Hide
       Select
    </button>
  </div>
  <div
    class="list-group"
  />
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  />
</div>
`;

exports[`Lists sets multiSelect to true when select is clicked 1`] = `
<div>
  <h1>
    Your Lists
  </h1>
  <p>
    These are lists you've created or you've accepted an invitation from someone else.
  </p>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="list-group"
  />
  <br />
  <h2>
    Completed Lists
  </h2>
  <p>
    These are the completed lists most recently created. 
    <a
      href="/completed_lists"
    >
      See all completed lists here.
    </a>
      Previously refreshed lists are marked with an asterisk (*).
  </p>
  <div
    class="list-group"
  />
</div>
`;
